--- a/src/pages/posts/welcome.mdx
+++ b/src/pages/posts/welcome.mdx
@@ -6,15 +6,29 @@ author: wutali
 tags:
   - document
 ---
-
-## The standard Lorem Ipsum passage
-
-"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
-
-## written by Cicero in 45 BC
-
-"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"
-
-## 1914 translation by H. Rackham
-
-"But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure?"
+| Example                                                                                                                                      | Tools                           | Type      | Source                                                                                                                          | More info                                                                                                 |
+| -------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------- | --------- | ------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------- |
+| [Gatsby & Netlify CMS Meetup Group Template](https://github.com/robertcoopercode/gatsby-netlify-cms)                                         | Gatsby                          | demo      | [robertcoopercode/gatsby-netlify-cms](https://github.com/robertcoopercode/gatsby-netlify-cms)                                   | [blog post](https://blog.logrocket.com/gatsby-netlify-cms-a-perfect-pairing-d50d59d16f67)                 |
+| [This Developing Journey](https://briandouglas.me/)                                                                                          | middleman                       | blog      | [bdougie/blog](https://github.com/bdougie/blog)                                                                                 | [blog post](https://www.netlify.com/blog/2017/04/20/creating-a-blog-with-middleman-and-netlify-cms/)      |
+| [Jamstack Recipes](https://jamstack-cms.netlify.com/)                                                                                        | Hugo, Azure                     | demo      | [hlaueriksson/jamstack-cms](https://github.com/hlaueriksson/jamstack-cms)                                                       | [blog post](http://conductofcode.io/post/managing-content-for-a-jamstack-site-with-netlify-cms/)          |
+| [The ragasirtahk Blog](https://www.ragasirtahk.tk/)                                                                                          | Hugo                            | blog      | [ragasirtahk/the-ragasirtahk-blog](https://github.com/ragasirtahk/the-ragasirtahk-blog)                                         | [blog post](https://www.ragasirtahk.tk/2018/01/setting-up-netlify-cms-on-hugo/)                           |
+| [Bael](https://bael-theme.jake101.com/)                                                                                                      | Vue, Nuxt                       | blog      | [jake-101/bael-template](https://github.com/jake-101/bael-template)                                                             | [blog post](https://bael-theme.jake101.com/blog/2018-06-19-top-10-reasons-why)                            |
+| [Forest Garden Wales](https://www.forestgarden.wales/)                                                                                       | Hugo                            | blog      | [forestgardenwales/forestgarden.wales](https://github.com/forestgardenwales/forestgarden.wales)                                 | [blog post](https://www.forestgarden.wales/blog/now-using-netlify-cms/)                                   |
+| [Jekyll Demo](https://jekyll-netlifycms.netlify.com/)                                                                                        | Jekyll, Gulp                    | demo      | [NickStees/jekyll-cms](https://github.com/NickStees/jekyll-cms)                                                                 | [read me](https://github.com/NickStees/jekyll-cms)                                                        |
+| [Jekyll feat Alembic Theme Demo](https://alembic-kit-demo.netlify.com/)                                                                      | Jekyll                          | demo      | [DavidDarnes/alembic-netlifycms-kit](https://github.com/daviddarnes/alembic-netlifycms-kit)                                     | [read me](https://github.com/daviddarnes/alembic-netlifycms-kit#starter-kit-for-alembic-with-netlify-cms) |
+| [Eleventy Starter Project](https://eleventy-netlify-boilerplate.netlify.com/)                                                                | Eleventy                        | demo      | [danurbanowicz/eleventy-netlify-boilerplate](https://github.com/danurbanowicz/eleventy-netlify-boilerplate)                     | [read me](https://github.com/danurbanowicz/eleventy-netlify-boilerplate)                                  |
+| [YellowCake - Complete website with blog](https://yellowcake.netlify.com/)                                                                   | Gatsby, Netlify-CMS, Uploadcare | demo      | [thriveweb/yellowcake](https://github.com/thriveweb/yellowcake/)                                                                | [blog post](https://thriveweb.com.au/the-lab/yellowcake-gatsby-react-js-starter-project/)                 |
+| [Vue.js - Nuxt.js Starter Project](https://github.com/renestalder/nuxt-netlify-cms-starter-template)                                         | Vue, Nuxt                       | demo      | [renestalder/nuxt-netlify-cms-starter-template](https://github.com/renestalder/nuxt-netlify-cms-starter-template)               | [read me](https://github.com/renestalder/nuxt-netlify-cms-starter-template)                               |
+| [Hexo Demo](https://hexocms.imst.xyz/)                                                                                                       | Hexo                            | demo      | [DemoMacro/Hexo-NetlifyCMS](https://github.com/DemoMacro/Hexo-NetlifyCMS)                                                       | [read me](https://github.com/DemoMacro/Hexo-NetlifyCMS)                                                   |
+| [Gitbook Demo](https://gitbook.imst.xyz/)                                                                                                    | Gitbook                         | demo      | [DemoMacro/Gitbook-NetlifyCMS](https://github.com/DemoMacro/Gitbook-NetlifyCMS)                                                 | [read me](https://github.com/DemoMacro/Gitbook-NetlifyCMS)                                                |
+| [VuePress Demo](https://vuepress.imst.xyz/)                                                                                                  | VuePress                        | demo      | [DemoMacro/VuePress-NetlifyCMS](https://github.com/DemoMacro/VuePress-NetlifyCMS)                                               | [read me](https://github.com/DemoMacro/VuePress-NetlifyCMS)                                               |
+| [Jigsaw Blog Starter Template Demo](https://jigsaw-blog-netlify-netlifycms-template.netlify.com/)                                            | Jigsaw                          | demo      | [erickpatrick/jigsaw-blog-netlify-netlifycms-template](https://github.com/erickpatrick/jigsaw-blog-netlify-netlifycms-template) | [blog post](https://www.erickpatrick.net/blog/augmenting-tightenco-jigsaw-with-netlifycms/)               |
+| [Nuxt & NetlifyCMS Boilerplate](https://nuxt-netlifycms-boilerplate.netlify.com/)                                                            | Vue, Nuxt                       | demo      | [tylermercer/nuxt-netlifycms-boilerplate](https://github.com/tylermercer/nuxt-netlifycms-boilerplate)                           | [read me](https://github.com/tylermercer/nuxt-netlifycms-boilerplate)                                     |
+| [Next.js demo](https://netlifycms-nextjs.netlify.com/)                                                                                       | Next.js                         | blog      | [masives/netlifycms-nextjs](https://github.com/masives/netlifycms-nextjs)                                                       | [read me](https://github.com/masives/netlifycms-nextjs)                                                   |
+| [Delog - Jamstack Blog with Netlify CMS](https://delog-w3layouts.netlify.com/)                                                               | Gatsby, Netlify-CMS             | demo      | [W3Layouts/gatsby-starter-delog](https://github.com/W3Layouts/gatsby-starter-delog)                                             | [blog post](https://w3layouts.com/articles/delog-gatsby-starter-netlify-cms/)                             |
+| [Netlify CMS template for Gridsome](https://netlifycms-gridsome.suits.at/)                                                                   | Gridsome, Vue                   | demo      | [suits-at/netlifycms-gridsome](https://github.com/suits-at/netlifycms-gridsome)                                                 | [read me](https://github.com/suits-at/netlifycms-gridsome)                                                |
+| [Next.js blogging template for Netlify](https://nextjs-netlify-blog-template.netlify.app/)                                                   | Next.js, Netlify                | blog      | [wutali/nextjs-netlify-blog-template](https://github.com/wutali/nextjs-netlify-blog-template)                                   | [read me](https://github.com/wutali/nextjs-netlify-blog-template)                                         |
+| [Netlify CMS and OAuth server on AWS](https://github.com/pulumi/examples/tree/master/aws-ts-netlify-cms-and-oauth)                           | Netlify, Pulumi, AWS            | blog      | [pulumi/examples/aws-ts-netlify-cms-and-oauth](https://github.com/pulumi/examples/tree/master/aws-ts-netlify-cms-and-oauth)     | [blog post](https://www.pulumi.com/blog/deploying-the-infrastructure-of-oauth-server-for-cms-app/)        |
+| [Eleventy Starter Boilerplate](https://creativedesignsguru.com/demo/Eleventy-Starter-Boilerplate/eleventy-starter-boilerplate-presentation/) | Eleventy, Netlify               | demo      | [ixartz/Eleventy-Starter-Boilerplate](https://github.com/ixartz/Eleventy-Starter-Boilerplate)                                   | [read me](https://github.com/ixartz/Eleventy-Starter-Boilerplate)                                         |
+| [Nuxt, Tailwind & NetlifyCMS Boilerplate](https://ntn-boilerplate.netlify.app/)                                                              | Vue, Nuxt                       | demo      | [Knogobert/ntn-boilerplate](https://github.com/Knogobert/ntn-boilerplate)                                                       | [read me](https://github.com/Knogobert/ntn-boilerplate#readme)                                            |
+| [Gatsby & Netlify CMS Personal Portfolio](https://kind-mestorf-5a2bc0.netlify.com/)                                                          | Gatsby                          | portfolio | [EarlGeorge/React-Gatsby](https://github.com/EarlGeorge/React-Gatsby)                                                           | [read me](https://github.com/EarlGeorge/React-Gatsby/blob/master/README.md)                               |
